--- a/1.css
+++ b/1.css
@@ -1,1 +1,23 @@
 *{margin: 0;padding: 0;}
+nav.navbar.navbar-expand-lg.navbar-dark.bg-dark {
+    margin:0;
+    padding:0;
+}
+
+a.navbar-brand {
+    margin:0;
+    padding:0;
+}
+
+a.nav-link {
+    font-family:segoe ui;
+    text-transform:uppercase;
+    font-size:13px;
+    color:#101010;
+    line-height:71px;
+}
+
+li.nav-item {
+    padding:0;
+    margin:0 18px;
+}
