--- a/1.css
+++ b/1.css
@@ -7,6 +7,11 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark {
 a.navbar-brand {
     margin:0;
     padding:0;
+    width: 90px;
+}
+
+a.navbar-brand img {
+    width: 100%;
 }
 
 a.nav-link {
