--- a/1.css
+++ b/1.css
@@ -26,3 +26,12 @@ li.nav-item {
     padding:0;
     margin:0 18px;
 }
+
+@media (max-width: 576px) {
+	* {}
+
+a.navbar-brand {
+    display: block;
+    padding: 15px;
+}
+}
