--- a/1.css
+++ b/1.css
@@ -40,7 +40,7 @@ a.nav-link {
 li.nav-item {
     padding: 0;
     margin: 0;
-    border-top:1px dashed #dad8d8
+    border-top:1px dashed #e5dedebd
 }
 
 a.navbar-brand {
