--- a/1.css
+++ b/1.css
@@ -39,7 +39,7 @@ h2.tieudecap2 {
 .tieudeto h1 {
     display: inline;
     background: url(images/ke.png) no-repeat left bottom;
-    padding-bottom: 40px;
+    padding-bottom: 4px;
     text-transform: uppercase;
     font-size: 30px;
 }
@@ -126,6 +126,10 @@ li.nav-item {
 
 @media (max-width: 576px) {
 	* {}
+
+h2.tieudecap2.text-sm-left.text-center {
+    margin-top: 50px;
+}
 
 .tt h2 {
     font-size: 33px;
