--- a/1.css
+++ b/1.css
@@ -1,5 +1,30 @@
 *{margin: 0;padding: 0;}
 
+.sanpham .danhsach nav ul li a:hover {
+    color: #2ecc71;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.sanpham .danhsach nav ul li a {text-transform: uppercase;font-family: segoe ui light;font-size: 16px;color: black;text-decoration: none;font-weight: normal;transition: 0.4s;}
+
+.sanpham .danhsach nav ul li {
+    list-style: none;
+    /* float: left; */
+    padding: 0 10px;
+    display: inline;
+}
+
+.content ul li img {
+    width: 100%;
+}
+
+.sanpham .content ul li {
+    list-style: none;
+    float: left;
+    width: 25%;
+}
+
 .xuong:after {content: '';position: absolute;width: 3px;height: 8px;background: white;left: 50%;bottom: 67%;margin-left: -2px;}
 
 .xuong:hover {
