--- a/index.css
+++ b/index.css
@@ -1,51 +1,207 @@
-*{margin: 0;padding: 0;}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-}
-p{
-    color: gray;
-    line-height: 30px;
-    font-weight: 200;
-    text-indent: 20px;
-}
-h5 {
-    font-family: 'Italianno', cursive;
-}
-#menu a.navbar-brand{
-    width: 70px;
-}
-#menu img {
-    width: 100%;
-    border-radius: 50%;
-}
-#menu ul li {
-    text-transform: uppercase;
-    padding: 10px;
-}
-li.nav-item.active {
+
+footer p {
+    font-size: 15px;
+    line-height: 7px;
     font-weight: bold;
 }
-#banner img {
+
+footer  p:first-child {
+    padding-top: 25px;
+}
+
+footer {
+    text-align: center;
+    background-color: #bfe1d4;
+    height: 80px;
+    margin-top: -16px;
+}
+
+.logo {
+    position: relative;
+    top: 15px;
+    left: 50px;
+    width: 50px;
+    margin: 0px;
+}
+
+select#time {
+    margin: 10px 10px 0px 0px;
+}
+
+.loader img {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 75px;
+    z-index: 4;
+}
+
+.rotatory {
+    animation: rotatory 1s linear infinite ;
+}
+
+input#fsearch {
+    width: 25%;
+    margin: 0 8px;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+
+body {
+    margin: 0;
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+}
+
+.background {
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.5;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+.searchbox img {
+    width: 13px;
+    float: right;
+    margin-top: -15px;
+    margin-right: -15px;
+}
+
+.searchbox img:hover {
+    cursor: pointer;
+}
+
+input#search {
+    padding: 0 5px;
+}
+
+.searchbox {
+    position: fixed;
+    top: 219px;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 1px solid gray;
+    padding: 25px 30px;
+    z-index: 2;
+    background-color: white;
+    width: 60%;
+}
+
+.fieldsearch {
+    display: none;
+}
+
+.searchbox button {
+    width: 57px;
+    height: 20px;
+    display: inline-block;
+}
+
+main {
+    width: 80%;
+    margin: auto;
+}
+
+article .content a {
+    font-weight: bold;
+}
+
+article .content span {
+    display: block;
+    margin: 15px 0;
+    font-style: italic;
+}
+
+article .content {
+    width: 65%;
+}
+
+article .picture img {
     width: 100%;
 }
-.posts p {
-    margin:10px;
+
+article .picture {
+    width: 30%;
 }
-footer .container {
-    color: gray;
-    background-color: #f7f7f7;
+
+article {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    border-bottom: 1px solid gray;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-img {
-    width: 100%;
+
+article:last-child {
+    border-bottom: none;
+    margin-bottom: 30px;
 }
-a.connect_link img {
-    position: absolute;
-    top: 12px;
-    width: 35px;
+
+header img {
+    width: 27px;
+    padding-left: 10px;
+}
+
+header img:hover {
+    cursor: pointer;
+}
+
+header h1 {
+    text-align: center;
+    background-color: #04AA6D;
+    padding: 10px;
+    margin: -31px 0px 10px;
+    font-family: Georgia, serif;
+}
+@keyframes rotatory{
+    from{transform: rotate(0deg);}
+    to{transform: rotate(360deg)};
 }
 @media only screen and (max-width: 767px) {
-ul li {
-    text-align: center;
-    border-bottom: 1px dotted gray;
+
+select#language {
+    margin-left: 8px;
+    width: 100px;
+}
+
+select#time {
+    margin-left: 8px;
+    margin-bottom: 8px;
+    width: 100px;
+}
+
+button#btn-tools {
+    margin: 8px 0px 0px 8px;
+}
+
+article .content {
+    width: 100%;
+    margin-top: 10px;
+}
+
+article .picture {
+    width: 100%;
+}
+
+article {
+    display: block;
+}
+input#fsearch {
+    width: 54%;
+}
+
+.searchbox {
+padding-left: 10px;
+}
+
+label {
+    display: none;
 }
 }
